refactor: architecture for path and validation
