# application/rest/clientapi-command/src/main/resources/com/architecture/ddd/application/rest/clientapi/command/openapi.yml
@@ -103,7 +103,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/userBody'
+              $ref: '#/components/schemas/userBodyNonRequired'
       responses:
         '200':
           description: Expected response to a valid request
@@ -140,6 +140,13 @@ components:
           nullable: false
       discriminator:
         propertyName: type
+    links:
+      required:
+        - self
+      properties:
+        self:
+          type: string
+          nullable: false
     response:
       required:
         - uuid
@@ -208,34 +215,6 @@ components:
               type: object
         meta:
           type: object
-    # body
-    userBody:
-      required:
-        - email
-        - name
-        - role
-        - documentType
-      properties:
-        email:
-          type: string
-          format: email
-        name:
-          type: string
-        role:
-          type: string
-        documentType:
-          type: string
-          enum:
-            - DNI
-            - PASSPORT
-            - OTHER
-    links:
-      required:
-        - self
-      properties:
-        self:
-          type: string
-          nullable: false
     # customResponse
     responseUser:
       allOf:
@@ -259,3 +238,29 @@ components:
               $ref: '#/components/schemas/userBody'
             links:
               $ref: '#/components/schemas/links'
+    # body NonRequired
+    userBodyNonRequired:
+      properties:
+        email:
+          type: string
+          format: email
+        name:
+          type: string
+        role:
+          type: string
+        documentType:
+          type: string
+          enum:
+            - DNI
+            - PASSPORT
+            - OTHER
+    # body Required
+    userBody:
+      allOf:
+        - $ref: '#/components/schemas/userBodyNonRequired'
+        - type: object
+          required:
+            - email
+            - name
+            - role
+            - documentType
